 NASA Blue Marble as world map layer instead. 

2) Complete list of BEAM 4.8 bug fixes and improvements

New Features
BEAM-1112 - GPF Operator API to provide better support for image filters and convolutions    
BEAM-1114 - GPF Tile API to provide method to directly check sample validity
BEAM-1167 - The Landsat reader does not support products in GeoTIFF

Improvements
BEAM-1085 - Support reprocessed data by NASA OBPG  
BEAM-1110 - Don't show empty masks for pins and GCPs
BEAM-1115 - Make lookup tables thread safe  
BEAM-1116 - GPF Tile API and API-docs to better express difference between raw and physical samples    
BEAM-1124 - GPF Tile API to provide method to directly access geo-physical data arrays
BEAM-1157 - No-data masking can easily be optimized    
BEAM-1162 - The Envisat reader should support refomatted / line-interleaved products
BEAM-1168 - Add Sinusoidal and Mollweide map projection

Bugs
BEAM-973 - NullPointerException occures VISAT by creation virtual band abs(Amplitude_HV / Amplitude_HH)
BEAM-1057 - Navigation rotation edit field prevents rotating image    
BEAM-1082 - Installation instructions are wrong for GETASSE30
BEAM-1087 - OBPG child products can not be read  
BEAM-1088 - Orthorectification does a map projection only
BEAM-1093 - Dragging does not work in Layer Manager    
BEAM-1094 - Not possible to add placemarks if scrollbars are used
BEAM-1095 - Pixel position is updated when geo-location is changed for GCPs
BEAM-1097 - Exception if reprojection results in large target product    
BEAM-1099 - DefaultSingleTargetProductDialog without processing parameter leads to exception
BEAM-1103 - Product outside of target area breaks processing of L3 binning
BEAM-1105 - NullPointerException is thrown, if editor for geometry layer is visible    
BEAM-1106 - ToolViews do not reflect the selected state correctly in all cases
BEAM-1107 - METOP reader cannot open subset products
BEAM-1108 - Import of Pins/GCPs fails  