@@ -32,6 +32,7 @@
         [BEAM-1157] No-data masking can easily be optimized<br/>
         [BEAM-1147] Signed byte data type interpreted as unsigned byte<br/>
         [BEAM-1146] Images explicitly set on a Band have inappropriate image-to-model transformation<br/>
+        [BEAM-1145] Image information gets lost during subset creation<br/>
         <p>Changes in 4.7:<br/>
         [BEAM-1115] Make lookup tables thread safe<br/>
         [BEAM-1088] Orthorectification does a map projection only<br/>
