@@ -16,7 +16,7 @@
         <![CDATA[
         <p>From 4.7 to 4.8:<br/>
             [BEAM-1147] Signed byte data type interpreted as unsigned byte<br/>
-            [BEAM-1034] Mosaic with polar stereographic projection<br/>
+            [BEAM-1134] Mosaic with polar stereographic projection<br/>
             [BEAM-1127] GPF geo-physical Tile API doesn't consider the valid-pixel mask<br/>
             [BEAM-1116] GPF Tile API and API-docs to better express difference between raw and physical samples<br/>
             [BEAM-1114] GPF Tile API to provide method to directly check sample validity<br/>
