@@ -17,9 +17,6 @@
 
     <changelog>
         <![CDATA[
-        <p>Changes in 1.0:<br/>
-            GlobCover world map added.
-        </p>
         ]]>
     </changelog>
 
